<resources>
    <!--General Strings-->
    <string name="app_name">Cafetería</string>

    <!--Login Activity-->
    <string name="UsuarioOCodigo">Usuario O Código UPB</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Recuerdame">Recuerdame?</string>
    <string name="Entrar">Entrar</string>
    <string name="Nuevo">Nuevo?</string>

    <!--Register Activity-->
    <string name="Usuario">Usuario</string>
    <string name="Codigo">Código UPB</string>
    <string name="Registrarse">Registrarse</string>



    <string name="Menu">Menu</string>
    <string name="Desayuno">Desayuno</string>
    <string name="Almuerzo">Almuerzo</string>
    <string name="Merienda">Merienda</string>
    <string name="Combos">Combos</string>
    <string name="Snacks">Snacks</string>
    <string name="Salir">Cerrar Sesion</string>
    <string name="Reservas">Reservas</string>
    <string name="Editar">Editar</string>
    <string name="Información">Información</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Código">Código</string>
    <string name="title_activity_reservas_case">ReservasCaseActivity</string>
    <string name="title_activity_layout_fake">layoutFakeActivity</string>
    <string name="title_activity_register_fake">RegisterFakeActivity</string>
    <string name="title_activity_login_fake">LoginFakeActivity</string>
</resources>
