<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mainMenuInformacion"
        android:onClick="onMenuClick"
        android:title="@string/Información">
        <menu>
            <item android:id="@+id/name"
                android:title="@string/Nombre">
            </item>
            <item android:id="@+id/apellido"
                android:title="@string/Apellido">
            </item>
            <item android:id="@+id/codigo"
                android:title="@string/Codigo">
            </item>
        </menu>
    </item>

    <item android:title="@string/Reservas"
        android:id="@+id/itemReservas"
        android:onClick="onMenuClick">
    </item>

    <item android:title="@string/Salir"
        android:id="@+id/itemDialog"
        android:onClick="onMenuClick">
    </item>



</menu>