<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizarra"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.programacion3.androidlatte.cafeteria_androidlatte.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#f7f1f1"
        android:width="250dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Codigo" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f7f1f1"
        android:width="250dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Contraseña" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:width="150dp"
        android:text="@string/Entrar"
        android:background="@color/colorButton"/>
    p<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nuevo"
        android:textColor="#0000ee"
        android:text="@string/Nuevo" />

</LinearLayout>

</LinearLayout>
