<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizarra"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.programacion3.androidlatte.cafeteria_androidlatte.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorText"
        android:textSize="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:width="250dp"
        android:hint="@string/Codigo"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHind" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="250dp"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHind" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:width="150dp"
        android:background="@color/colorButton"
        android:text="@string/Entrar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nuevo"
            android:textColor="@color/colorText" />

    </LinearLayout>

</LinearLayout>
