<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pizarra"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.programacion3.androidlatte.cafeteria_androidlatte.UI.Activities.MenuCaseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/redChalk"
        android:textSize="@dimen/titleText" />

    <Button
        android:id="@+id/editar"
        android:onClick="click"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/greenChalk"
        android:text="@string/Editar"
        android:textSize="@dimen/bigTextBoton"/>

    <Button
        android:id="@+id/reservas"
        android:onClick="click"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:background="@color/greenChalk"
        android:text="@string/Reservas"
        android:textSize="@dimen/bigTextBoton"/>

</LinearLayout>
